--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -75,16 +75,14 @@
   box-shadow: 0px 0px 24px rgba(0, 0, 0, .3)
 
 .acordion .tarjeta
-  background-color: #13DE61
-.acordion .acordion__titulo h3
-  color: #fff
+  background-color: #CFE1FA
 .acordion .tarjeta.acordion__activo
-  background-color: #EFE8F7
+  background-color: #CFF8DE
 .acordion .tarjeta.acordion__activo *
   color: #12263F
 .acordion__accion__btn--a
-  border: 1px solid #FAC22D
-  background-color: #FAC22D
+  border: 1px solid #FEE734
+  background-color: #FEE734
 
 .banner-interno__titulo__icono i
   color: #12263F !important
@@ -146,3 +144,16 @@
     top: 0
   .cont_decorativo .col
     place-self: center !important
+
+/************************Tema 1**********************/
+.cont_1_1,.cont_1_1 *
+  position: relative
+.cont_1_1:before
+  content: ''
+  position: absolute
+  width: 113%
+  height: 95%
+  top: 0
+  left: -7%
+  background-image: url(../assets/curso/tema1/2.png)
+  background-size: cover
