--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -136,6 +136,16 @@
 .banner-interno__titulo h1, .banner-interno__titulo h2, .banner-interno__titulo h3, .banner-interno__titulo h4, .banner-interno__titulo h5, .banner-interno__titulo h6 
   color: #12263F !important
 
+.cont_titulo3
+  background-color: #13DE61
+  max-width: fit-content
+  padding: .7rem 2rem
+  border-radius: 4px
+  text-align: center
+  margin-bottom: 1.5rem
+  h5
+    margin-bottom: 0
+
 @media screen and (max-width: 992px)
   .banner-principal .tarjeta, .cont_intro:before
     background-size: cover !important
