--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -167,3 +167,16 @@
   left: -7%
   background-image: url(../assets/curso/tema1/2.png)
   background-size: cover
+
+/************************Tema 3**********************/
+.cont_3_1,.cont_3_1 *
+  position: relative
+.cont_3_1:before
+  content: ''
+  position: absolute
+  width: 113%
+  height: 95%
+  top: 5%
+  left: -7%
+  background-image: url(../assets/curso/tema3/3.png)
+  background-size: cover
